23-istio-1/virtualservice.yml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: hello-world
spec:
  hosts:
    - hello-world
  http:
    - route:
        - destination:
            host: hello-world
            subset: v1
          weight: 90
        - destination:
            host: hello-world
            subset: v2
          weight: 10
